--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ install:
   - scheme-env install sagittarius@0.9.2
   - scheme-env install chez@v9.5
   - scheme-env install larceny@1.3
+  - find ~/.scheme-env/implementations -maxdepth 3 -type d -exec ls -l {} +
 
 script:
   - ./run-tests.sh
